--- a/public/what-is-a-procy/index.html
+++ b/public/what-is-a-procy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -909,6 +909,17 @@
 
     <div class="container">
         <div class="row">
+            <div class="col-4">
+                <h5>Smarter Guardians</h5>
+                <nav>
+                    <ul >
+                        <li class="elementor-icon-list-item"><a href="https://smarterguardians.com/">About US</a></li>
+                        <li><a href="https://smarterguardians.com/all-features/">Features</a></li>
+                        <li><a href="https://smarterguardians.com/what-is-a-proxy/">How it Works</a></li>
+                        <li style="text-align: left"><a href="https://smarterguardians.com/pricing/">Pricing</a></li>
+                        </ul>
+                </nav>
+            </div>
             <div class="col-12 col-lg-4 mb-3"><a href="#"><img class="d-inline-block align-middle"
                         src="/assets/img/smarterguide.png" alt="" width="30" /><span
                         class="d-inline-block text-1000 fs-1 ms-2 fw-medium lh-base">Smarter<span
